z-index bag fixed

--- a/frontend/telran_project_frontend/src/components/BasketItem/style.module.css
+++ b/frontend/telran_project_frontend/src/components/BasketItem/style.module.css
@@ -19,7 +19,7 @@
     width: 100px;
 }
 .basketItem_image img{
-    /* width: 100%; */
+    width: 100%;
     height: 100%;
     object-fit: contain;
 }
