--- a/frontend/telran_project_frontend/src/components/CategoryItem/style.module.css
+++ b/frontend/telran_project_frontend/src/components/CategoryItem/style.module.css
@@ -3,7 +3,7 @@
     height: 100%;
     display: flex;
     flex-direction: column;
-    position: relative;
+    
     transition: all .7s;
 }
 .category_card:hover {
@@ -13,6 +13,7 @@
 .card_image_wrapper{
     width: calc(var(--width)/4);
     height: calc(var(--width)/4); 
+    position: relative;
 }
 
 .card_image {
@@ -28,7 +29,7 @@
     position: absolute;
     top: 80%;
     left: 5%;
-    z-index: 3;
+    z-index: 1;
     background-color: #ffffffe5;
     text-transform: uppercase;
     color: var(--black);
