--- a/frontend/telran_project_frontend/src/components/Modal/style.module.css
+++ b/frontend/telran_project_frontend/src/components/Modal/style.module.css
@@ -11,7 +11,7 @@
     opacity: 0;
     pointer-events: none;
     transition: 0.5s;
-    z-index: 500;
+    z-index: 5;
 }
 
 .modal_active{
@@ -26,6 +26,7 @@
     justify-content: flex-end;
     opacity: 1;
     pointer-events: all;
+    z-index: 5;
 }
 .modal_content{
     padding: 20px;
@@ -35,7 +36,7 @@
     height: 100vh;
     transform: scale(0.5);
     transition: 0.4s all;
-    z-index: 100;
+    z-index: 5;
     
 }
 .modal_content_active{
@@ -45,7 +46,7 @@
     height: 100vh;
     transition: 0.4s all;
     transform: scale(1);
-    z-index: 100;
+    z-index: 5;
     display: flex;
     flex-direction: column;
     justify-content: center;
